--- a/flask/apps/templates/home/index.html
+++ b/flask/apps/templates/home/index.html
@@ -250,7 +250,7 @@
       <div class="col-lg-6 col-md-12">
         <div class="card ">
           <div class="card-header">
-            <h4 class="card-title"> Simple Table</h4>
+            <h4 class="card-title"> Access Logs</h4>
           </div>
           <div class="card-body">
             <div class="table-responsive">
@@ -258,116 +258,116 @@
                 <thead class=" text-primary">
                   <tr>
                     <th>
-                      Name
+                      Client
                     </th>
                     <th>
-                      Country
+                      Method
                     </th>
                     <th>
-                      City
+                      Request
                     </th>
                     <th class="text-center">
-                      Salary
+                      Status
                     </th>
                   </tr>
                 </thead>
                 <tbody>
                   <tr>
                     <td>
-                      Dakota Rice
+                      37.152.163.59
                     </td>
                     <td>
-                      Niger
+                      GET
                     </td>
                     <td>
-                      Oud-Turnhout
+                      /image/29314?name=%D8%AF%DB%8C%D8%A8%D8%A7-7.j...	
                     </td>
                     <td class="text-center">
-                      $36,738
+                      200	
                     </td>
                   </tr>
                   <tr>
                     <td>
-                      Minerva Hooper
+                      86.104.110.254
                     </td>
                     <td>
-                      Curaçao
+                      GET
                     </td>
                     <td>
-                      Sinaai-Waas
+                      /static/images/zanbil-kharid.png	
                     </td>
                     <td class="text-center">
-                      $23,789
+                      404
                     </td>
                   </tr>
                   <tr>
                     <td>
-                      Sage Rodriguez
+                      5.125.254.169
                     </td>
                     <td>
-                      Netherlands
+                      GET
                     </td>
                     <td>
-                      Baileux
+                      /static/images/next.png
                     </td>
                     <td class="text-center">
-                      $56,142
+                      200	
                     </td>
                   </tr>
                   <tr>
                     <td>
-                      Philip Chaney
+                      85.9.73.119	
                     </td>
                     <td>
-                      Korea, South
+                      GET
                     </td>
                     <td>
-                      Overland Park
+                      /static/images/checked.png
                     </td>
                     <td class="text-center">
-                      $38,735
+                      200	
                     </td>
                   </tr>
                   <tr>
                     <td>
-                      Doris Greene
+                      65.49.68.192
                     </td>
                     <td>
-                      Malawi
+                      GET
                     </td>
                     <td>
-                      Feldkirchen in Kärnten
+                      /image/29314?name=%D8%AF%DB%8C%D8%A8%D8%A7-4.j...	
                     </td>
                     <td class="text-center">
-                      $63,542
+                      200	
                     </td>
                   </tr>
                   <tr>
                     <td>
-                      Mason Porter
+                      86.104.110.254
                     </td>
                     <td>
-                      Chile
+                      GET
                     </td>
                     <td>
-                      Gloucester
+                      /static/images/zanbil-kharid.png	
                     </td>
                     <td class="text-center">
-                      $78,615
+                      404
                     </td>
                   </tr>
                   <tr>
                     <td>
-                      Jon Porter
+                      86.104.110.254
                     </td>
                     <td>
-                      Portugal
+                      GET
                     </td>
                     <td>
-                      Gloucester
+                      /static/images/zanbil-kharid.png	
                     </td>
                     <td class="text-center">
-                      $98,615
+                      404
                     </td>
                   </tr>
                 </tbody>
