--- a/flask/apps/templates/home/ui-tables.html
+++ b/flask/apps/templates/home/ui-tables.html
@@ -103,7 +103,6 @@
                   200	
                 </td>
               </tr>
-
             </tbody>
           </table>
         </div>
@@ -111,15 +110,30 @@
     </div>
   </div>
   <div class="col-md-12">
-    <div class="card  card-plain">
+    <div class="card">
       <div class="card-header">
         <h4 class="card-title"> UPLOAD</h4>
         <p class="category"> Logs here to get Anyaltics</p>
       </div>
       <div class="card-body">
         <div class="table-responsive">
+          <a class="btn btn-primary btn-lg" href="http://localhost:8501" role="button" target="_blank" rel="noopener noreferrer">New Anylatics</a>
+        </div>
+      </div>
+    </div>
+  </div>
 
-          <!-- ADD A UPlOAD BUTTON HERE -->
+  <div class="col-md-12">
+    <div class="card">
+      <div class="card-header">
+        <h4 class="card-title"> Download</h4>
+        <p class="category">Download Logs here to get Anyaltics</p>
+      </div>
+      <div class="card-body">
+        <div class="table-responsive">
+          <a class="btn btn-primary btn-sm" href="https://file162.gofile.io/download/0ffe0b39-7d08-48bd-9854-280fc80e99e2/access3.csv" role="button" target="_blank" rel="noopener noreferrer">Access Logs</a>
+          <a class="btn btn-primary btn-sm" href="https://store4.gofile.io/download/c5d6e942-bb4b-4b95-b029-f42e1217d74c/webserver.csv" role="button" target="_blank" rel="noopener noreferrer">Client Logs</a>
+          <a class="btn btn-primary btn-sm" href="https://store4.gofile.io/download/c5d6e942-bb4b-4b95-b029-f42e1217d74c/webserver.csv" role="button" target="_blank" rel="noopener noreferrer">Web Server Logs</a>
         </div>
       </div>
     </div>
