Edited Upper Part Of Home Section

--- a/flask/apps/templates/home.html
+++ b/flask/apps/templates/home.html
@@ -35,7 +35,9 @@
             <div class="header-container">
                 <!-- Header navbar -->
                 <nav class="main-header-navbar">
-                    <img src="./static/assets/Logo.svg" alt="CRAPPO logo" class="main-header-navbar__logo" />
+                    <!-- <img src="./static/assets/Logo.svg" alt="CRAPPO logo" class="main-header-navbar__logo" /> -->
+                    <img src="./static/assets/img/apple-icon-1.png" alt="CRAPPO logo" class="main-header-navbar__logo" />
+
 
                     <ul class="main-header-navbar__nav">
                         <li class="main-header-navbar__nav__item">
@@ -61,22 +63,28 @@
                 <!-- Header content -->
                 <div class="main-header-content-container">
                     <div class="main-header-content-principal">
-                        <div class="discount-section">
+                        <!-- <div class="discount-section">
                             <span class="discount-section__discount">75% SAVE</span>
                             <span class="discount-section__description">For the Black Friday weekend</span>
-                        </div>
+                        </div> -->
                         <h1 class="main-header-content-principal__title">
-                            Fastest & <span>secure</span> platform to invest in
-                            <span>crypto</span>
+                            <!-- Fastest & <span>secure</span> platform to invest in
+                            <span>crypto</span> -->
+                            Your  &nbsp;<span> VISION</span> &nbsp; <br>Our
+                            &nbsp;&nbsp;<span class="typing">MISSION</span>
                         </h1>
                         <p class="main-header-content-principal__description">
-                            Buy and sell cryptocurrencies, trusted by 10M wallets with over
-                            $30 billion in transactions.
+                            <!-- Buy and sell cryptocurrencies, trusted by 10M wallets with over
+                            $30 billion in transactions. -->
+                            Store data, Analyze and Predict models,
+                            Access logs and what not!
                         </p>
                         <a href="http://127.0.0.1:5002/login" class="main-header-content-principal__btn">Gets Go!<i
                                 class="fas fa-angle-right"></i></a>
                     </div>
-                    <img src="./static/assets/header-assets/header-Illustration.svg" alt="" class="
+                    <!-- <img src="./static/assets/header-assets/header-Illustration.svg" alt="" class="
+                main-header-content-principal__illustration" /> -->
+             <img src="./static/assets/img/ipfs-img.png" alt="" class="
                 main-header-content-principal__illustration" />
                 </div>
             </div>
@@ -91,24 +99,24 @@
                 <div class="stats-section">
                     <div class="stats-section__reference">
                         <i class="fas fa-chart-line"></i>
-                        <h3 class="stats-section__reference__title">$30B</h3>
-                        <p class="stats-section__reference__description">
+                        <h3 class="stats-section__reference__title"><u>Logs Analysis</u></h3>
+                        <!-- <p class="stats-section__reference__description">
                             Digital Currency Exchanged
-                        </p>
+                        </p> -->
                     </div>
                     <div class="stats-section__reference">
                         <i class="fas fa-user"></i>
-                        <h3 class="stats-section__reference__title">10M+</h3>
-                        <p class="stats-section__reference__description">
+                        <h3 class="stats-section__reference__title"><u>Individuals Data</u></h3>
+                        <!-- <p class="stats-section__reference__description">
                             Trusted Wallets Investor
-                        </p>
+                        </p> -->
                     </div>
                     <div class="stats-section__reference">
                         <i class="fas fa-globe"></i>
-                        <h3 class="stats-section__reference__title">195</h3>
-                        <p class="stats-section__reference__description">
+                        <h3 class="stats-section__reference__title"><u>Blockchain Protocol</u></h3>
+                        <!-- <p class="stats-section__reference__description">
                             Countries Supported
-                        </p>
+                        </p> -->
                     </div>
                 </div>
 
@@ -119,10 +127,15 @@
                             Why you should choose <span>CRAPPO</span>
                         </h2>
                         <p class="why-us-section__content__description">
-                            Experience the next generation cryptocurrency platform. No
-                            financial borders, extra fees, and fake reviews.
+                            ** Decentralized Storage Network<br><br>
+                            ** Charge Less
+                            <br><br>
+                            ** Easy Accessibility
+                            <br>
+                            <a href="#" class="why-us-section__content__btn">Learn More</a>
                         </p>
-                        <a href="#" class="why-us-section__content__btn">Learn More</a>
+                        
+                        
                     </div>
                     <img src="./static/assets/why-us-section-assets/why-us-Illustration.svg" alt="" class="
                 why-us-section__illustration          " />
