--- a/flask/apps/templates/home/index.html
+++ b/flask/apps/templates/home/index.html
@@ -6,6 +6,33 @@
 {% block stylesheets %}{% endblock stylesheets %}
 
 {% block content %}
+<div class="col-md-14">
+  <div class="card">
+    <div class="card-header">
+      <h4 class="card-title"> Project</h4>
+      <p class="category"> Create a Project</p>
+    </div>
+    <div class="card-body">
+      <div class="table-responsive">
+        <a class="btn btn-primary btn-lg" href="http://127.0.0.1:5000/project" role="button"  target="_blank" onclick="demo.showNotification('top','right')">    +    </a>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- <div class="col-md-14">
+  <div class="card">
+    <div class="card-header">
+      <h4 class="card-title"> Heading</h4>
+      <p class="category"> Add here</p>
+    </div>
+    <div class="card-body">
+      <div class="table-responsive">
+        <a class="btn btn-primary btn-lg" href="http://localhost:8501" role="button" target="_blank" rel="noopener noreferrer">......</a>
+      </div>
+    </div>
+  </div>
+</div> -->
 
     <div class="row">
 
@@ -98,8 +125,8 @@
       <div class="col-lg-6 col-md-12">
         <div class="card card-tasks">
           <div class="card-header ">
-            <h6 class="title d-inline">Tasks(5)</h6>
-            <p class="card-category d-inline">today</p>
+            <h6 class="title d-inline">OLD PROJECTS</h6>
+            <p class="card-category d-inline">History</p>
             <div class="dropdown">
               <button type="button" class="btn btn-link dropdown-toggle btn-icon" data-toggle="dropdown">
                 <i class="tim-icons icon-settings-gear-63"></i>
@@ -117,18 +144,18 @@
                 <tbody>
                   <tr>
                     <td>
-                      <div class="form-check">
+                      <!-- <div class="form-check">
                         <label class="form-check-label">
                           <input class="form-check-input" type="checkbox" value="">
                           <span class="form-check-sign">
                             <span class="check"></span>
                           </span>
                         </label>
-                      </div>
+                      </div> -->
                     </td>
                     <td>
-                      <p class="title">Update the Documentation</p>
-                      <p class="text-muted">Dwuamish Head, Seattle, WA 8:47 AM</p>
+                      <p class="title">Project 1</p>
+                      <p class="text-muted">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book</p>
                     </td>
                     <td class="td-actions text-right">
                       <button type="button" rel="tooltip" title="" class="btn btn-link" data-original-title="Edit Task">
@@ -138,18 +165,18 @@
                   </tr>
                   <tr>
                     <td>
-                      <div class="form-check">
+                      <!-- <div class="form-check">
                         <label class="form-check-label">
                           <input class="form-check-input" type="checkbox" value="" checked="">
                           <span class="form-check-sign">
                             <span class="check"></span>
                           </span>
                         </label>
-                      </div>
+                      </div> -->
                     </td>
                     <td>
-                      <p class="title">GDPR Compliance</p>
-                      <p class="text-muted">The GDPR is a regulation that requires businesses to protect the personal data and privacy of Europe citizens for transactions that occur within EU member states.</p>
+                      <p class="title">Project 2</p>
+                      <p class="text-muted">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book</p>
                     </td>
                     <td class="td-actions text-right">
                       <button type="button" rel="tooltip" title="" class="btn btn-link" data-original-title="Edit Task">
@@ -159,18 +186,18 @@
                   </tr>
                   <tr>
                     <td>
-                      <div class="form-check">
+                      <!-- <div class="form-check">
                         <label class="form-check-label">
                           <input class="form-check-input" type="checkbox" value="">
                           <span class="form-check-sign">
                             <span class="check"></span>
                           </span>
-                        </label>
+                        </label> -->
                       </div>
                     </td>
                     <td>
-                      <p class="title">Solve the issues</p>
-                      <p class="text-muted">Fifty percent of all respondents said they would be more likely to shop at a company </p>
+                      <p class="title">Project 3</p>
+                      <p class="text-muted">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book</p>
                     </td>
                     <td class="td-actions text-right">
                       <button type="button" rel="tooltip" title="" class="btn btn-link" data-original-title="Edit Task">
@@ -180,18 +207,18 @@
                   </tr>
                   <tr>
                     <td>
-                      <div class="form-check">
+                      <!-- <div class="form-check">
                         <label class="form-check-label">
                           <input class="form-check-input" type="checkbox" value="">
                           <span class="form-check-sign">
                             <span class="check"></span>
                           </span>
-                        </label>
+                        </label> -->
                       </div>
                     </td>
                     <td>
-                      <p class="title">Release v2.0.0</p>
-                      <p class="text-muted">Ra Ave SW, Seattle, WA 98116, SUA 11:19 AM</p>
+                      <p class="title">Project 4</p>
+                      <p class="text-muted">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book</p>
                     </td>
                     <td class="td-actions text-right">
                       <button type="button" rel="tooltip" title="" class="btn btn-link" data-original-title="Edit Task">
@@ -201,18 +228,18 @@
                   </tr>
                   <tr>
                     <td>
-                      <div class="form-check">
+                      <!-- <div class="form-check">
                         <label class="form-check-label">
                           <input class="form-check-input" type="checkbox" value="">
                           <span class="form-check-sign">
                             <span class="check"></span>
                           </span>
-                        </label>
+                        </label> -->
                       </div>
                     </td>
                     <td>
-                      <p class="title">Export the processed files</p>
-                      <p class="text-muted">The report also shows that consumers will not easily forgive a company once a breach exposing their personal data occurs. </p>
+                      <p class="title">Project 5</p>
+                      <p class="text-muted">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book </p>
                     </td>
                     <td class="td-actions text-right">
                       <button type="button" rel="tooltip" title="" class="btn btn-link" data-original-title="Edit Task">
@@ -222,18 +249,18 @@
                   </tr>
                   <tr>
                     <td>
-                      <div class="form-check">
+                      <!-- <div class="form-check">
                         <label class="form-check-label">
                           <input class="form-check-input" type="checkbox" value="">
                           <span class="form-check-sign">
                             <span class="check"></span>
                           </span>
-                        </label>
+                        </label> -->
                       </div>
                     </td>
                     <td>
-                      <p class="title">Arival at export process</p>
-                      <p class="text-muted">Capitol Hill, Seattle, WA 12:34 AM</p>
+                      <p class="title">Project 6</p>
+                      <p class="text-muted">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book</p>
                     </td>
                     <td class="td-actions text-right">
                       <button type="button" rel="tooltip" title="" class="btn btn-link" data-original-title="Edit Task">
