--- a/flask/apps/templates/home.html
+++ b/flask/apps/templates/home.html
@@ -36,7 +36,7 @@
                 <!-- Header navbar -->
                 <nav class="main-header-navbar">
                     <!-- <img src="./static/assets/Logo.svg" alt="CRAPPO logo" class="main-header-navbar__logo" /> -->
-                    <img src="./static/assets/img/apple-icon-1.png" alt="CRAPPO logo" class="main-header-navbar__logo" />
+                    <img src="./static/assets/img/apple-icon-11.png" alt="CRAPPO logo" class="main-header-navbar__logo" />
 
 
                     <ul class="main-header-navbar__nav">
@@ -79,7 +79,7 @@
                             Store data, Analyze and Predict models,
                             Access logs and what not!
                         </p>
-                        <a href="http://127.0.0.1:5002/login" class="main-header-content-principal__btn">Gets Go!<i
+                        <a href="http://127.0.0.1:5002/login" class="main-header-content-principal__btn">Lets Go!<i
                                 class="fas fa-angle-right"></i></a>
                     </div>
                     <!-- <img src="./static/assets/header-assets/header-Illustration.svg" alt="" class="
@@ -99,21 +99,21 @@
                 <div class="stats-section">
                     <div class="stats-section__reference">
                         <i class="fas fa-chart-line"></i>
-                        <h3 class="stats-section__reference__title"><u>Logs Analysis</u></h3>
+                        <h3 class="stats-section__reference__title">Logs Analysis</h3>
                         <!-- <p class="stats-section__reference__description">
                             Digital Currency Exchanged
                         </p> -->
                     </div>
                     <div class="stats-section__reference">
                         <i class="fas fa-user"></i>
-                        <h3 class="stats-section__reference__title"><u>Individuals Data</u></h3>
+                        <h3 class="stats-section__reference__title">Individual's Data</h3>
                         <!-- <p class="stats-section__reference__description">
                             Trusted Wallets Investor
                         </p> -->
                     </div>
                     <div class="stats-section__reference">
                         <i class="fas fa-globe"></i>
-                        <h3 class="stats-section__reference__title"><u>Blockchain Protocol</u></h3>
+                        <h3 class="stats-section__reference__title">Peer to Peer Network</h3>
                         <!-- <p class="stats-section__reference__description">
                             Countries Supported
                         </p> -->
@@ -127,11 +127,14 @@
                             Why you should choose <span>Us</span>
                         </h2>
                         <p class="why-us-section__content__description">
-                            ** Decentralized Storage Network<br><br>
-                            ** Charge Less
+                            
+                            
+                            • Decentralized Storage Network
                             <br><br>
-                            ** Easy Accessibility
-                            <br>
+                            • Charge Less
+                            <br><br>
+                            • Easy Accessibility
+                            <br><br>
                             <a href="#" class="why-us-section__content__btn">Learn More</a>
                         </p>
                         
@@ -162,7 +165,7 @@
             <!-- Cryptocurrencies section -->
             <section class="cryptocurrencies-section" id="products">
                 <h2 class="cryptocurrencies-section__title">
-                    Trade securely and market the high growth cryptocurrencies.
+                    Decentralized And Encrypted Data.
                 </h2>
                 <div class="cryptocurrencies-info-cards">
                     <!-- <div class="info-card">
@@ -185,12 +188,12 @@
                     </div> -->
                     
                     <div class="info-card">
-                        <img src="./static/assets/img/filecoin.png" alt="" class="info-card__icon" />
-                        <h3 class="info-card__title">Filecoin <span>LTC</span></h3>
+                        <img src="./static/assets/img/filecoin2.png" alt="" class="info-card__icon" />
+                        <h3 class="info-card__title">Filecoin <span>FLR</span></h3>
                         <p class="info-card__description">
                             A digital payment system intended to be a blockchain-based cooperative digital storage and data retrieval method. 
                                                 </p>
-                        <a href="#" class="info-card__btn">Start mining <i class="fas fa-angle-right"></i></a>
+                        <a href="#" class="info-card__btn">Learn More <i class="fas fa-angle-right"></i></a>
                     </div>
                 </div>
             </section>
@@ -226,13 +229,13 @@
                         <a href="#" class="detailed-stats-article__content__btn">Learn More</a>
                     </div>
 
-                    <img src="./static/assets/features-section-assets/features-section-statistic.svg" alt="Detailed statistics"  class="detailed-stats-article__graphic" />
+                    <img src="./static/assets/img/profile_11.png" alt="Detailed statistics"  class="detailed-stats-article__graphic" />
                 </article>
 
                 <article class="grow-profit-article">
                     <div class="grow-profit-article__content">
                         <h3 class="grow-profit-article__content__title">
-                            Take improvised decion and grow your bussiness
+                            Take improvised decision and grow your bussiness
                         </h3>
                         <p class="grow-profit-article__content__description">
                             Use advanced analytical tools, take improvised dicision 
@@ -241,7 +244,7 @@
                         <a href="#" class="grow-profit-article__content__btn">Learn More</a>
                     </div>
 
-                    <img src="./static/assets/img/user-info.jpg" alt="Profit graphic" class="grow-profit-article__graphic" />
+                    <img src="./static/assets/img/profile_111.png" alt="Profit graphic" class="grow-profit-article__graphic" />
                 </article>
             </section>
         </main>
