--- a/flask/apps/templates/home.html
+++ b/flask/apps/templates/home.html
@@ -191,7 +191,8 @@
                         <img src="./static/assets/img/filecoin2.png" alt="" class="info-card__icon" />
                         <h3 class="info-card__title">Filecoin <span>FLR</span></h3>
                         <p class="info-card__description">
-                            A digital payment system intended to be a blockchain-based cooperative digital storage and data retrieval method. 
+                            A digital payment system intended to be a blockchain-based <br>
+                            cooperative digital storage and data retrieval method. 
                                                 </p>
                         <a href="#" class="info-card__btn">Learn More <i class="fas fa-angle-right"></i></a>
                     </div>
@@ -252,7 +253,7 @@
         <!-- Call To Action -->
         <aside class="cta-section" id="contact">
             <div class="cta-section__content">
-                <h3 class="cta-section__content__title">Grow your Business</h3>
+                <h3 class="cta-section__content__title">Contact US</h3>
                 <p class="cta-section__content__description">
                     Join now with us to get the latest news and start with the community.
                 </p>
