edited svg image

--- a/flask/apps/templates/home.html
+++ b/flask/apps/templates/home.html
@@ -140,8 +140,8 @@
                         
                         
                     </div>
-                    <img src="./static/assets/why-us-section-assets/why-us-Illustration.svg" alt="" class="
-                why-us-section__illustration          " />
+                    <br><br>
+                    <img src="./static/assets/undraw_select_option_re_u4qn111.svg" />
                 </div>
 
                 <!-- Benefits -->
@@ -191,9 +191,9 @@
                         <img src="./static/assets/img/filecoin2.png" alt="" class="info-card__icon" />
                         <h3 class="info-card__title">Filecoin <span>FLR</span></h3>
                         <p class="info-card__description">
-                            A digital payment system intended to be a blockchain-based <br>
+                            <!-- A digital payment system intended to be a blockchain-based <br>
                             cooperative digital storage and data retrieval method. 
-                                                </p>
+                                                </p> -->
                         <a href="#" class="info-card__btn">Learn More <i class="fas fa-angle-right"></i></a>
                     </div>
                 </div>
@@ -202,15 +202,14 @@
             <!-- Features section -->
             <section class="features-section" id="features">
                 <h2 class="features-section__title">
-                    Market sentiments, portfolio, and run the infrastructure of your
-                    choice
+                    Build on the decentralized cloud.
                 </h2>
 
                 <article class="invest-smart-article">
                     <div class="invest-smart-article__content">
-                        <h3 class="invest-smart-article__content__title">Invest Smart</h3>
+                        <h3 class="invest-smart-article__content__title">Pay As You Go</h3>
                         <p class="invest-smart-article__content__description">
-                            Pay through the Filecoin, store the data and get access to decentralized server access.
+                           Pay for what you use and experience the affordable and scalable network.
                         </p>
                         <a href="#" class="invest-smart-article__content__btn">Learn More</a>
                     </div>
