updated detailed stats

--- a/flask/apps/templates/home.html
+++ b/flask/apps/templates/home.html
@@ -223,8 +223,7 @@
                             Detailed Statistics
                         </h3>
                         <p class="detailed-stats-article__content__description">
-                            View all mining related information in realtime, at any point at
-                            any location and decide which polls you want to mine in.
+                           Batteries-included analytics pipeline with out-of-the-box integrations with your favorite visualization tools.
                         </p>
                         <a href="#" class="detailed-stats-article__content__btn">Learn More</a>
                     </div>
