--- a/flask/apps/templates/home.html
+++ b/flask/apps/templates/home.html
@@ -165,7 +165,7 @@
             <!-- Cryptocurrencies section -->
             <section class="cryptocurrencies-section" id="products">
                 <h2 class="cryptocurrencies-section__title">
-                    Decentralized And Encrypted Data.
+                    Storage backend agnostic
                 </h2>
                 <div class="cryptocurrencies-info-cards">
                     <!-- <div class="info-card">
@@ -237,7 +237,7 @@
                             Take improvised decision and grow your bussiness
                         </h3>
                         <p class="grow-profit-article__content__description">
-                            Use advanced analytical tools, take improvised dicision 
+                            Use advanced analytical tools, take improvised decision 
                             and grow your business with our detail access logs information.
                         </p>
                         <a href="#" class="grow-profit-article__content__btn">Learn More</a>
