--- a/flask/apps/templates/home/index.html
+++ b/flask/apps/templates/home/index.html
@@ -110,7 +110,7 @@
       <div class="col-lg-4">
         <div class="card card-chart">
           <div class="card-header">
-            <h5 class="card-category">GET Request</h5>
+            <h5 class="card-category">Ram Usage</h5>
             <h3 class="card-title"><i class="tim-icons icon-send text-success"></i> 12,100</h3>
           </div>
           <div class="card-body">
