--- a/flask/apps/templates/project.html
+++ b/flask/apps/templates/project.html
@@ -116,6 +116,7 @@
         <div class="table-full-width table-responsive">
           <table class="table">
             <tbody>
+              <h6 class="title d-inline">Empty! Create One</h6>
               {% for data in pas3 %}
               <tr>
                 <td>
@@ -184,6 +185,7 @@
   <div class="card card-tasks">
     <div class="card-header ">
       <h6 class="title d-inline">Log Store</h6>
+      <h6 class="title d-inline">Empty! Create One</h6>
       <!-- <div class="dropdown"> -->
       <!-- <button type="button" class="btn btn-link dropdown-toggle btn-icon" data-toggle="dropdown">
         <i class="tim-icons icon-settings-gear-63"></i>
