--- a/flask/apps/templates/home/ui-tables.html
+++ b/flask/apps/templates/home/ui-tables.html
@@ -117,7 +117,7 @@
       </div>
       <div class="card-body">
         <div class="table-responsive">
-          <a class="btn btn-primary btn-lg" href="http://localhost:8501" role="button" target="_blank" rel="noopener noreferrer">Anylatics</a>
+          <a class="btn btn-primary btn-lg" href="http://20.26.235.201:8501" role="button" target="_blank" rel="noopener noreferrer">Anylatics</a>
         </div>
       </div>
     </div>
